--- a/contato.html
+++ b/contato.html
@@ -14,13 +14,8 @@
             <li>
                 <a href="index.html">Home</a>
             </li>
-            <li class="dropdown">
-                <a href="">Curriculo</a>
-
-                <div class="dropdown-menu">
-                    <a href="./docs/curriculo-arq.pdf" target="_blank" rel="externo">Arquitetura</a>
-                    <a href="./docs/curriculo-cp.pdf" target="_blank" rel="externo">Computação</a>
-                </div>
+            <li>
+                <a href="./docs/curriculo-arq.pdf">Curriculo</a>               
             </li>
             <li>
                 <a href="https://github.com/Terres201" target="_blank" rel="externo">GitHub</a>
