--- a/index.html
+++ b/index.html
@@ -14,13 +14,8 @@
             <li>
                 <a class="active" href="index.html">Home</a>
             </li>
-            <li class="dropdown">
-                <a href="">Curriculo</a>
-
-                <div class="dropdown-menu">
-                    <a href="./docs/curriculo-arq.pdf" target="_blank" rel="externo">Arquitetura</a>
-                    <a href="./docs/curriculo-cp.pdf" target="_blank" rel="externo">Computação</a>
-                </div>
+            <li>
+                <a href="./docs/curriculo-arq.pdf">Curriculo</a>               
             </li>
             <li>
                 <a href="https://github.com/Terres201" target="_blank" rel="externo">GitHub</a>
@@ -72,63 +67,63 @@
             <h2>Vida Pessoal</h2>
             <p>Eu como pessoa gosto de Games dos mais variados tipos, adoro filmes e séries principalmente de terror, suspense e ficção ciêntifica sendo meu filme favorito Star Wars. <a href="https://www.instagram.com/hst.horrorstories/?hl=pt-br" target="_blank" rel="externo">Escrevo contos de terror</a>  como passatempo (quando se há tempo), costumamente focando em terror existêncial e horror cósmico tendo sempre como referência obras de Stephen King, Edgar Allan Poe, H.P.Lovecraft e em curtas do canal <a href="https://www.youtube.com/@WatchALTER" target="_blank" rel="externo">Alter</a> no youtube. Gosto de centros urbanos mas também curto a paz e calmaria de ambientes naturais, principalmente cachoeiras. Sou fascinado por LEGO e quebra cabeças. Sou apaixonado pela cultura japonesa principalmente sua culinária e arquitetura. Assisto animes variados. Minhas cores preferidas são vermelho e preto, gosto de massas e chocolate. Sou apaixonado pelo universo do Batman sejam filmes, quadrinhos ou séries animadas.</p>
 
-            <br><br><br><br><br>
+            <br><br>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th><strong>FILMES FAVORITOS</strong></td>
-                        <th><strong>JOGOS FAVORITOS</strong></td>
-                        <th><strong>ANIMES FAVORITOS</strong></td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Star Wars</td>
-                        <td>Cyberpunk 2077</td>
-                        <td>Neon Genesis Evangelion</td>
-                    </tr>
-                    <tr>
-                        <td>Indiana Jones</td>
-                        <td>GTA V</td>
-                        <td>Darling in the Franxx</td>
-                    </tr>
-                    <tr>
-                        <td>Blade Runner</td>
-                        <td>The Elder Scrolls V</td>
-                        <td>Naruto</td>
-                    </tr>
-                    <tr>
-                        <td>Senhor dos Anéis</td>
-                        <td>Tomb Raider</td>
-                        <td>Another</td>
-                    </tr>
-                    <tr>
-                        <td>Batman</td>
-                        <td>Outlast</td>
-                        <td>Cyberpunk: Mercenários</td>
-                    </tr>
-                    <tr>
-                        <td>Alien</td>
-                        <td>Life is Strange</td>
-                        <td>Konosuba</td>
-                    </tr>
-                    <tr>
-                        <td>Invocação do Mal</td>
-                        <td>Alien Isolation</td>
-                        <td>Death Note</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>Minecraft</td>
-                        <td>Demon Slayer</td>
-                    </tr>
-                </tbody>
-            </table>        
+            <div style="overflow-x: auto;">
+                <table>
+                    <thead>
+                        <tr>
+                            <th><strong>FILMES FAVORITOS</strong></td>
+                            <th><strong>JOGOS FAVORITOS</strong></td>
+                            <th><strong>ANIMES FAVORITOS</strong></td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Star Wars</td>
+                            <td>Cyberpunk 2077</td>
+                            <td>Neon Genesis Evangelion</td>
+                        </tr>
+                        <tr>
+                            <td>Indiana Jones</td>
+                            <td>GTA V</td>
+                            <td>Darling in the Franxx</td>
+                        </tr>
+                        <tr>
+                            <td>Blade Runner</td>
+                            <td>The Elder Scrolls V</td>
+                            <td>Naruto</td>
+                        </tr>
+                        <tr>
+                            <td>Senhor dos Anéis</td>
+                            <td>Tomb Raider</td>
+                            <td>Another</td>
+                        </tr>
+                        <tr>
+                            <td>Batman</td>
+                            <td>Outlast</td>
+                            <td>Cyberpunk: Mercenários</td>
+                        </tr>
+                        <tr>
+                            <td>Alien</td>
+                            <td>Life is Strange</td>
+                            <td>Konosuba</td>
+                        </tr>
+                        <tr>
+                            <td>Invocação do Mal</td>
+                            <td>Alien Isolation</td>
+                            <td>Death Note</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Minecraft</td>
+                            <td>Demon Slayer</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <br>
+            </div>        
     </main>
 
-    <footer>
-
-    </footer>
 </body>
 </html>
