--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a class="active" href="index.html">Home</a>
             </li>
             <li>
-                <a href="./docs/curriculo-arq.pdf">Curriculo</a>               
+                <a href="./docs/curriculo-arq.pdf" target="_blank" rel="externo">Curriculo</a>               
             </li>
             <li>
                 <a href="https://github.com/Terres201" target="_blank" rel="externo">GitHub</a>
