--- a/index.html
+++ b/index.html
@@ -115,11 +115,23 @@
                             <td>Death Note</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td>Entrando Numa Fria</td>
                             <td>Minecraft</td>
                             <td>Demon Slayer</td>
                         </tr>
+                         <tr>
+                            <td>Ilha do Medo</td>
+                            <td>Eurotruck Simulator 2</td>
+                            <td>Kakegurui</td>
+                        </tr>
                     </tbody>
+                    <tfoot>
+                        <tr>
+                            <td>Gente Grande</td>
+                            <td>Valorant</td>
+                            <td>Kaguya Sama</td>
+                        </tr>
+                    </tfoot>
                 </table>
                 <br>
             </div>        
